--- a/dashboard-app/src/dashboard/components/candidate-stash/style-parts/innerOrderListSortHeader.module.css
+++ b/dashboard-app/src/dashboard/components/candidate-stash/style-parts/innerOrderListSortHeader.module.css
@@ -37,8 +37,8 @@
 }
 
 .innerOrderSortHeaderNum {
-  justify-content: flex-end;
-  text-align: right;
+  justify-content: center;
+  text-align: center;
   white-space: normal;
 }
 
@@ -49,15 +49,18 @@
   max-width: 100%;
   width: 100%;
   height: 100%;
+  justify-content: flex-start;
   text-align: left;
 }
 
 .innerOrderSortHeaderCenter .innerOrderSortLabel {
+  justify-content: center;
   text-align: center;
 }
 
 .innerOrderSortHeaderNum .innerOrderSortLabel {
-  text-align: right;
+  justify-content: center;
+  text-align: center;
 }
 
 .innerOrderSortIcon {
